# C2paLib

C2paJni/: settings.gradle.kts
C2paJni/app/: build.gradle.kts
C2paJni/app/src/androidTest/java/com/example/c2pajni/: ExampleInstrumentedTest.kt
C2paJni/app/src/main/: AndroidManifest.xml
C2paJni/app/src/main/java/com/example/c2pajni/: MainActivity.kt  NativeBridge.kt  ResultCallback.kt
C2paJni/app/src/main/res/values/: strings.xml  themes.xml
C2paJni/app/src/main/res/values-night/: themes.xml
C2paJni/app/src/test/java/com/example/c2pajni/: ExampleUnitTest.kt
C2paJni/gradle/wrapper/: gradle-wrapper.properties
Rust/c2pa_lib/: .gitignore  Cargo.toml
Rust/c2pa_lib/src/: lib.rs
Rust/c2pa_lib/src/jni/: jni_interface.rs
Rust/c2pa_lib/src/test/: Cargo.toml  assertion_builder.rs  c2pa_signer.rs  file_manager.rs  jpeg_parser.rs  media_signer_module.rs  mp4_parser.rs  sign_content.rs  sign_content_v2.rs  signer_executer.rs
Rust/c2pa_lib/src/test/assertion/: assertion_data.rs  c2pa_signer_master.rs  key.rx
Rust/c2pa_lib/src/test/async/: Cargo.toml  main.rs  runtime.rs  signing_task.rs  task_handler.rs  task_manager.rs  task_result.rs
